# lardon

./: .gitignore  HitsOutput.txt  README.md  R_tree.py  __init__.py  analysis_parameters.py  cb_config.json  cb_period1.json  channel_mapping.py  clusters.py  config.py  data_containers.py  decode_data.py  det_spec.py  ghost.py  hit_finder.py  hits_3d.py  lar_param.py  lardenv.yml  lardon.py  matching.py  noise_filter.py  pedestals.py  pierre_filter.py  pulse_waveforms.py  pyproject.toml  read_raw_file.py  reconstruction_parameters.py  set_lardon.sh  single_hits.py  stitch_tracks.py  store.py  tiblardon.py  track_2d.py  track_3d.py  vertexing.py  workflow.py
lardon/: __main__.py  clusters.py  config.py  data_containers.py  hit_finder.py  lardenv.yml  lardon.py  pulse_waveforms.py  reconstruction_parameters.py  stitch_tracks.py  store.py  workflow.py
lardon/plotting/: __init__.py  event_display.py  hits.py  pds.py  style.py  waveforms.py
lardon/utils/: bde_headers.py
plotting/: __init__.py  charge_and_light.py  event_display.py  noise.py  online.py  pds.py  reco_2d.py  reco_3d.py  save_plot.py  select_hits.py  style.py  waveforms.py
reco/: top_423_1.h5
settings/: analysis_parameters.json  bde_calib_area_2021.txt  default_reco_parameters.json  geo_coldbox.json  run_coldbox.json
settings/50l/: geo.json  path.json  reco_parameters.json
settings/50l_bot/: geo.json  path.json  reco_parameters.json
settings/calib/: bde_calib_area_crp4.txt  bde_calib_area_crp6.txt  pdhd_calib_14mV.txt  pdhd_calib_7.8mV.txt
utils/: cern_daq.py  filenames.py  lyon_daq.py  wib_daq.py
(+80 files in other folders)
