[project]
name = "lardon"
version = "0.1.0"
description = "Liquid Argon Reconstruction Done in pythON"
authors = [{ name = "Laura Zambelli"}]
requires-python = ">=3.11,<3.12"

dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "numba>=0.61.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "uproot>=5.6.2",
    "numexpr>=2.10.2",
    "tables>=3.10.2",         # PyTables package name
    "h5py>=3.14.0",
    "vitables>=3.1.0",
    "colorcet>=3.1.0",
    "bottleneck>=1.5.0",
    "psutil>=7.0.0",
    "xrootd>=5.8.2",
    "rtree",
    "json-with-comments",
    "iminuit",
    "bokeh",
    "ipython",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
constraint-dependencies = ["llvm>0.43.0"]
prerelease = "allow"


[tool.setuptools.packages.find]
where = ["lardon"]

[project.scripts]
lardon = "lardon:main"
